--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 “code/” filter=lfs diff=lfs merge=lfs -text
 code.zip filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+code/ filter=lfs diff=lfs merge=lfs -text
